--- a/PRJ_Assignment/web/index.html
+++ b/PRJ_Assignment/web/index.html
@@ -4,12 +4,68 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit this template
 -->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+
+<head>
+    <title>FPT University Academic Portal</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="title">
+                    <span>
+                        <h1 style="font-size: 36px; font-family: sans-serif;">FPT University Academic Portal</h1>
+                    </span>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td colspan="2" class="auto-style1">
+                                <strong style="font-size: 13px; font-family: sans-serif;">FAP mobile app (myFAP) is
+                                    ready at</strong>
+                            </td>
+                        </tr>
+                        <tr style="display: flex; margin-right: 30px;">
+                            <td>
+                                <a href="https://app.apple.com/app/id1527723314">
+                                    <img src="img/app-store.svg" style="width: 120px; height: 40px;" alt="apple store">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://play.google.com/store/apps/details?id=com.fuct">
+                                    <img src="img/play-store.svg" style="width: 120px; height: 40px;"
+                                        alt="google store">
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <form name="aspnetForm" method="post" action="./PRJ_Assignment" id="aspnetForm">
+                    <hr style="margin-left: 50px;" width="90%" size="25px" align="center" color="#bcbabab6" ; />
+                    <!-- <ol class="breadcrumb">
+                        <li>
+                            <span id="ct100_lblNavigation"></span>
+                        </li>
+                    </ol> -->
+                </form>
+                <table>
+
+                </table>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
