--- a/PRJ_Assignment/web/index.html
+++ b/PRJ_Assignment/web/index.html
@@ -1,71 +1,272 @@
-<!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit this template
--->
-<html>
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>FPT University Academic Portal</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <title>
+        FPT University Academic Portal
+    </title>
+    <link rel="Stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" type="text/css" />
+    <link rel="Stylesheet" href="style.css" type="text/css" />
+    <link rel="Stylesheet" href="Content/bootstrap.css" type="text/css" />
+    <style type="text/css">
+        .style1 {
+            font-weight: bold;
+        }
+    </style>
+
 </head>
 
 <body>
     <div class="container">
+
         <div class="row">
+
             <div class="col-md-8">
-                <div class="title">
-                    <span>
-                        <h1 style="font-size: 36px; font-family: sans-serif;">FPT University Academic Portal</h1>
-                    </span>
-                </div>
+
+                <h1><span>FPT University Academic Portal</span>
+                </h1>
+
             </div>
             <div class="col-md-4">
                 <table>
-                    <tbody>
-                        <tr>
-                            <td colspan="2" class="auto-style1">
-                                <strong style="font-size: 13px; font-family: sans-serif;">FAP mobile app (myFAP) is
-                                    ready at</strong>
-                            </td>
-                        </tr>
-                        <tr style="display: flex; margin-right: 30px;">
-                            <td>
-                                <a href="https://app.apple.com/app/id1527723314">
-                                    <img src="img/app-store.svg" style="width: 120px; height: 40px;" alt="apple store">
-                                </a>
-                            </td>
-                            <td>
-                                <a href="https://play.google.com/store/apps/details?id=com.fuct">
-                                    <img src="img/play-store.svg" style="width: 120px; height: 40px;"
-                                        alt="google store">
-                                </a>
-                            </td>
-                        </tr>
-                    </tbody>
+                    <tr>
+                        <td colspan="2" class="auto-style1"><strong>FAP mobile app (myFAP) is ready at</strong></td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://apps.apple.com/app/id1527723314">
+                                <img src="https://fap.fpt.edu.vn/images/app-store.svg"
+                                    style="width: 120px; height: 40px" alt="apple store" /></a></td>
+                        <td><a href="https://play.google.com/store/apps/details?id=com.fuct">
+                                <img src="https://fap.fpt.edu.vn/images/play-store.svg"
+                                    style="width: 120px; height: 40px" alt="google store" /></a></td>
+                    </tr>
                 </table>
             </div>
         </div>
+
         <div class="row">
             <div class="col-md-12">
-                <form name="aspnetForm" method="post" action="./PRJ_Assignment" id="aspnetForm">
-                    <hr style="margin-left: 50px;" width="90%" size="25px" align="center" color="#bcbabab6" ; />
-                    <!-- <ol class="breadcrumb">
-                        <li>
-                            <span id="ct100_lblNavigation"></span>
-                        </li>
-                    </ol> -->
-                </form>
-                <table>
+                <form name="aspnetForm" method="post" action="./" id="aspnetForm">
+                    <div>
+                        <input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="" />
+                        <input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="" />
+                        <input type="hidden" name="__LASTFOCUS" id="__LASTFOCUS" value="" />
+                        <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE"
+                            value="/wEPDwUJNjc2MTUyNDc0D2QWAmYPZBYCAgMPZBYEAgEPFgIeB1Zpc2libGVoZAIFD2QWAgIBD2QWAgIBDxBkZBYBZmRkICmGFH+uwUl/btZw7W9+0i7UnVf3WvUttrw5Yp++aLM=" />
+                    </div>
 
-                </table>
+                    <script type="text/javascript">
+                        var theForm = document.forms['aspnetForm'];
+                        if (!theForm) {
+                            theForm = document.aspnetForm;
+                        }
+                        function __doPostBack(eventTarget, eventArgument) {
+                            if (!theForm.onsubmit || (theForm.onsubmit() != false)) {
+                                theForm.__EVENTTARGET.value = eventTarget;
+                                theForm.__EVENTARGUMENT.value = eventArgument;
+                                theForm.submit();
+                            }
+                        }
+                    </script>
+                    <div>
+                        <input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="CA0B0334" />
+                        <input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION"
+                            value="/wEdAAiI8yN8TXNo/iy/IkdmpFYO1ZWqR6ljRJGb9mEZktA3XKqU7CaSg+wPXz/3l6S9ZjiSD1GKPUsR9KXpKj3jOOWku49L3JqFCWR9GGhMPmiNS0ZIBGGuozU0xJ5NRQcV2LFvqmBvaEIHX/Biv0pDwM/1BT+GWrfmMj8WjvmevktzuKIkbNkwFgOFeyuSNTPMOVizKW5s1UlieaYStIbyGmrJ" />
+                    </div>
+                    <ol class="breadcrumb">
+                        <li>
+                            <span id="ctl00_lblNavigation"></span>
+                        </li>
+                    </ol>
+                    <table>
+                        <tr style="border-bottom: 0 none">
+                            <td>
+                                <div>
+                                    <meta name="google-signin-scope" content="profile email" />
+                                    <script src="https://apis.google.com/js/platform.js?onload=init" async
+                                        defer></script>
+                                    <meta name="google-signin-client_id"
+                                        content="183063314780-0j6vj5ddfm7j3lsledglk2egnk18up7f.apps.googleusercontent.com" />
+
+                                    <script type="text/javascript">
+                                        function onSignIn(googleUser) {
+                                            var profile = googleUser.getBasicProfile();
+                                            var email = profile.getEmail();
+                                            var id_token = googleUser.getAuthResponse().id_token;
+                                            if (id_token != null) {
+                                                signOut();
+                                                window.location.href = "Default.aspx?token=" + id_token;
+                                            }
+                                        }
+                                        function empty(str) {
+                                            if (typeof str == 'undefined' || !str || str.length === 0 || str === "" || !/[^\s]/.test(str) || /^\s*$/.test(str) || str.replace(/\s/g, "") === "") {
+                                                return true;
+                                            }
+                                            else {
+                                                return false;
+                                            }
+                                        }
+                                        function signOut() {
+                                            var auth2 = gapi.auth2.getAuthInstance();
+                                            auth2.signOut().then(function () {
+
+                                            });
+                                        }
+                                    </script>
+
+                                    <input type="hidden" name="ctl00$mainContent$message"
+                                        id="ctl00_mainContent_message" />
+
+                                    <div id="ctl00_mainContent_divcontent">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div style="border: solid 1px #ccc; height: 150px;">
+                                                    <fieldset>
+                                                        <legend><span class="label btn-warning"><b>Phụ
+                                                                    huynh</b></span></legend>
+                                                        <div style="margin-top: -15px">
+                                                            <a href="Phuhuynh/Login.aspx">
+                                                                <h3>
+                                                                    <span class="btn btn-primary"><b>Đăng
+                                                                            nhập</b></span>
+                                                                </h3>
+                                                            </a>
+                                                        </div>
+                                                    </fieldset>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div style="border: solid 1px #ccc; height: 150px;">
+                                                    <fieldset>
+                                                        <legend><span class="label btn-warning"><b>Sinh
+                                                                    viên, Giảng viên, Cán bộ ĐH-FPT</b></span></legend>
+                                                        <br />
+                                                        <div id="loginform" vertical-align: central">
+                                                            <center>
+                                                                <div class="row">
+                                                                    <div class="col-sm-4">
+                                                                        <select name="ctl00$mainContent$ddlCampus"
+                                                                            onchange="javascript:setTimeout(&#39;__doPostBack(\&#39;ctl00$mainContent$ddlCampus\&#39;,\&#39;\&#39;)&#39;, 0)"
+                                                                            id="ctl00_mainContent_ddlCampus"
+                                                                            class="btn btn-default">
+                                                                            <option selected="selected" value="">Select Campus</option>
+                                                                            <option value="3">FU-Hòa Lạc</option>
+                                                                            <option value="4">FU-Hồ Chí Minh</option>
+                                                                            <option value="5">FU-Đà Nẵng</option>
+                                                                            <option value="6">FU-Cần Thơ</option>
+                                                                            <option value="7">FU-Quy Nhơn</option>
+                                                                        </select>
+                                                                    </div>
+                                                                    <div class="col-sm-4">
+                                                                        <div style="margin-left: -50px"
+                                                                            class="g-signin2" data-onsuccess="onSignIn"
+                                                                            data-theme="dark"></div>
+                                                                    </div>
+                                                                    <span id="ctl00_mainContent_lblMessage"
+                                                                        class="information"></span>
+                                                                </div>
+                                                                <br />
+                                                            </center>
+                                                        </div>
+                                                    </fieldset>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr style="border-bottom: 0 none">
+                            <td>
+                                <br />
+                                <table width="100%" style="border: 1px solid transparent;" id="cssTable">
+                                    <tr>
+                                        <td>
+
+
+
+
+
+
+                                        </td>
+
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <p style="text-align: center">
+                                                © Powered by <a href="http://fpt.edu.vn" target="_blank">FPT
+                                                    University</a>&nbsp;|&nbsp;
+                                                <a href="http://cms.fpt.edu.vn/" target="_blank">CMS</a>&nbsp;|&nbsp; <a
+                                                    href="http://library.fpt.edu.vn"
+                                                    target="_blank">library</a>&nbsp;|&nbsp; <a
+                                                    href="http://library.books24x7.com" target="_blank">books24x7</a>
+                                                <span id="ctl00_lblHelpdesk"></span>
+                                            </p>
+                                        </td>
+                                    </tr>
+                                </table>
+
+                            </td>
+                        </tr>
+                    </table>
+                </form>
             </div>
         </div>
     </div>
+    <script type="text/javascript">
+
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-10421012-13']);
+        _gaq.push(['_trackPageview']);
+
+        (function () {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
+    </script>
+
+    <script type="text/javascript">
+        var isClose = false;
+        document.onkeydown = checkKeycode;
+        function checkKeycode(e) {
+            var keycode;
+            if (window.event)
+                keycode = window.event.keyCode;
+            else if (e)
+                keycode = e.which;
+            if (keycode == 116) {
+                isClose = true;
+            }
+        }
+        function somefunction() {
+            isClose = true;
+        }
+        function bodyUnload() {
+
+            if (!isClose) {
+                var request = GetRequest();
+                request.open("GET", "LogOut.aspx", true);
+                request.send();
+            }
+        }
+        function GetRequest() {
+            var request = null;
+            if (window.XMLHttpRequest) {
+                request = new XMLHttpRequest();
+            }
+            else {
+                request = new ActiveXObject('MSXML2.XMLHTTP.3.0');
+            }
+            return request;
+        }
+    </script>
+
 </body>
 
 </html>
